add yandex map and dadata

--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@element-plus/nuxt": "^1.0.6",
     "@nuxt/devtools": "latest",
+    "@yandex/ymaps3-types": "^0.0.18",
     "nuxt": "^3.8.0",
     "vue": "^3.3.7",
     "vue-router": "^4.2.5"
+  },
+  "dependencies": {
+    "@element-plus/icons-vue": "^2.1.0",
+    "axios": "^1.6.0",
+    "element-plus": "^2.4.1"
   }
 }
