--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,13 @@
 {
   // https://nuxt.com/docs/guide/concepts/typescript
-  "extends": "./.nuxt/tsconfig.json"
+  "extends": "./.nuxt/tsconfig.json",
+  "typeRoots": [
+    "./types",
+    "./node_modules/@yandex/ymaps3-types"
+  ],
+  "paths": {
+    "ymaps3": [
+      "./node_modules/@yandex/ymaps3-types"
+    ]
+  }
 }
